# mbpy

./: .gitignore  .md5  .python-version  .summary_cache  CHANGELOG.md  README.md  agent_interaction.py  chat_history.jsonl  conf.py  convert.sh  cps.sh  create_embodied_data.sh  cy.toml  diffs.txt  gen_cmake.py  gen_setup.py  language.py  list.sh  mdtree2.md  mkdocs.yml  nix.conf  out.py  pyproject.toml  readmev0.md  readmev1  requirements.txt  setup.py  setup_flags.sh  smartdiff.sh  test.md  test.sh  test.toml  todorn.py  ts.py
ctree/: gen_cmake.py  pyproject.toml
docs/: .md5  Makefile  build.md  conf.py  conf.rst  getting_started.rst  index.md  index.rst  usage.rst
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/docs/: api.doctree  index.doctree  installation.doctree  usage.doctree
docs/_build/: .md5
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: .md5
docs/_templates/: class.rst  module.rst
docs/api/: index.rst  mbpy.rst  modules.rst
docs/api/_autosummary/: mbpy.chars.rst  mbpy.cmd.rst  mbpy.collect.rst  mbpy.create.rst  mbpy.ctx.rst  mbpy.docparser.rst  mbpy.grammar.rst  mbpy.import_utils.rst  mbpy.log.rst  mbpy.main.rst  mbpy.mbconvert.rst  mbpy.parse.rst  mbpy.plugin.rst  mbpy.proxy2.rst  mbpy.rag.rst  mbpy.rst  mbpy.sock.rst  mbpy.t.rst  mbpy.test_mbconvert.rst  mbpy.uv.rst
docutils/: examples.py
dspy/: finetune_graph_dspy.ipynb
experimental/: .python-version  agent_interaction.py  g2.py  g3.py  g4.py  pyproject.toml  requirements.txt
experimental/knowledge/: .python-version  pyproject.toml
experimental/knowledge/docs/: conf.py
experimental/knowledge/docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
experimental/knowledge/docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
experimental/knowledge/docs/_build/html/_sources/: api.rst.txt  index.rst.txt
experimental/knowledge/docs/_build/html/_static/: custom.css
experimental/knowledge/src/knowledge/: __init__.py  density_retrieval.py  entity_extract.py  finetune_graph_dspy.ipynb  use_entity.py
graphs/: .md5  density_retrieval.py  visualize.py
graphs/assistant/: .md5  pyproject.toml
graphs/assistant/mbpy/: __init__.py
graphs/assistant/mbpy/docs/: api.rst  index.rst
graphs/assistant/src/: .md5
graphs/assistant/src/assistant/: .md5
graphs/dspy/: .md5
graphs/prover/: .md5
graphs/prover/docs/: .md5
graphs/prover/prover/: .md5  .python-version  pyproject.toml
graphs/prover/prover/prover/: .md5  agents.py  main.py
mbpy/: .md5  __init__.py  __version__.py  _typing.py  bump.py  cli.html  cli.py  cmd.py  collect.py  commands.py  conf.py  context.py  create.py  ctx.py  d.py  diffs  discussion.md  docparser.py  file_assistant.py  graph.py  graph2.py  hatch.py  import_utils.py  install_extras.sh  ipy.py  log.py  main.py  makesphinx.py  mpip.py  mypy.json  nxgraphdraw.py  out.py  partial-cibuildwheel.json  pkg.py  profile.py  publish.py  pyproject.json  repair.py  requirements.txt  static.py  (+5 more)
mbpy.egg-info/: PKG-INFO  SOURCES.txt
mbpy/assistant/: .md5  assistant.py  file_assistant.py  gradio_assistant.py  rtd.py  tools.py
mbpy/assistant/mbodi/: .md5  architect_prompts.py  ask_prompts.py  diffs.py  editblock_fenced_prompts.py  editblock_func_prompts.py  editblock_prompts.py  editor_editblock_prompts.py  explorer_coder.py  explorer_prompts.py  io_types.py  repomap.py  search_replace.py  udiff_prompts.py  wholefile_prompts.py
mbpy/assistant/src/: .md5
mbpy/assistant/src/assistant/: .md5
mbpy/diff/: diff.py  ui.py
mbpy/expect/: asyncspawn.py  spawn.py  spawnbase.py
mbpy/helpers/: _cache.py  _cmd.py  _compile.py  _display.py  _dist.py  _find.py  _logging.py  _lru.py  _modified.py  _naming.py  _proto.py  _sphinx.py  _static.py  _traceback.py  _typing.py  autopip.py  cli.py  gcliff.py  gcliff.sh  traverse.py
mbpy/helpers/_mypy/: _typed_dict.py
mbpy/pkg/: dependency.py  directive.py  git.py  graph.py  mb_completions.zsh  pypi.py
mbpy/scripts/: bench.sh  clean.sh
mbpy/store/: hatch_metadata.py  schema_to_model.py
mbpy/store/py/: from_schema.py
mbpy/store/py/model/: pyproject.py
mbpy/store/ros/: CATALOGUE.md  launch.json
mbpy/store/ts/: __init__.py
mbpy/utils/: _env.py  _typing.py  cmd_utils.py  collect.py  collections.py  import_utils.py  makesphinx.py  parse_utils.py  poexpect.py  proto_utils.py  static.py  xml_utils.py
mbpy/workflow/: .md5  notion.py  slack.py
rn/: Untitled-1.json  cython_plugin.py  hooks.py  plugin.py  tool.py  walk_schemas.py  xml_utils.py
schemas/: partial-scikit-build.json  partial-setuptools-scm.json  partial-setuptools.json  ruff.json  uv.json
schemas/hatch_fragments/: Build.json  CollectorEnv.json  CustomTargets.json  Env.json  Envs.json  Hook.json  Hooks.json  Metadata.json  Override.json  Overrides.json  Platform.json  Publish.json  PublishIndex.json  Target.json  Version.json  hatch.json
schemas/model/: pyproject.py  zenoh_config.py
schemas/pyproject_fragments/: BuildSystem.json  partial-cibuildwheel.json  partial-mypy.json  partial-pdm.json  partial-poetry.json  partial-pyright.json  projectAuthor.json  pyproject.json
src/mbnew/: __init__.py
testcmd/: .gitignore  app.py  compilation_flags.md  cy.py  mod.pyx  setup.py
tests/: .md5  test_add_pip.py  test_create.py  test_default_export.py  test_docparse2.py  test_docparser.py  test_file_assistant.py  test_gcommit.py  test_graph.py  test_hb.py  test_import_utils.py  test_mpip.py  test_parsing.py  test_pyproject_toml.py  test_requirements_handling.py  test_rich.py  test_type_utils.py
