[build-system]
# requires = ["hatchling>=1.18.0", "Cython>=0.29.30", "toml>=0.10.2", "hatch-cython", "setuptools"]
# build-backend = "hatchling.build"
requires = ["setuptools", "wheel", "Cython"]  
build-backend = "setuptools.build_meta"  
[project]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Cython",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "mrender @ file:///Users/sebastianperalta/simply/corp/projects/mrender",
  "tomlkit>=0.13.2",
  "aiofiles>=24.1.0",
  "pybind11>=2.13.6",
  "Jinja2>=3.1.5",
  "typing_extensions>=4.12.2",
  "distro>=1.9.0",
  "attrs>=24.3.0",
  "h11>=0.14.0",
  "regex>=2024.11.6",
  "fastjsonschema>=2.21.1",
  "multidict>=6.1.0",
  "greenlet>=3.1.1",
  "toml>=0.10.2",
  "pathspec>=0.12.1",
  "coverage>=7.6.10",
  "beautifulsoup4>=4.12.3",
  "mypy>=1.14.1",
  "Markdown>=3.0.0",
  "keyring>=25.6.0",
  "frozenlist>=1.5.0",
  "filelock>=3.16.1",
  "more-itertools>=10.5.0",
  "twine>=6.0.1",
  "certifi>=2024.12.14",
  "pytest>=8.3.4",
  "yarl>=1.18.3",
  "requests>=2.32.3",
  "zstandard>=0.23.0",
  "anyio>=4.8.0",
  "numpy>=2.2.1",
  "urllib3>=2.3.0",
  "MarkupSafe>=3.0.2",
  "joblib>=1.4.2",
  "idna>=3.10",
  "openai>=1.59.7",
  "python-dateutil>=2.9.0.post0",
  "aiohttp>=3.11.11",
  "packaging>=24.2",
  "setuptools>=75.8.0",
  "click>=8.1.8",
  "tomli_w>=1.1.0",
  "lark>=1.2.2",
  "six>=1.17.0",
  "tqdm>=4.67.1",
  "Cython>=3.0.11",
  "distlib>=0.3.9",
  "pkginfo>=1.12.0",
  "playwright>=1.49.1",
  "nltk>=3.9.1",
  "httpcore>=1.0.7",
  "platformdirs>=4.3.6",
  "httpx>=0.28.1",
  "docutils>=0.21.2",
  "networkx>=3.4.2",
  "soupsieve>=2.6",
  "charset-normalizer>=3.4.1",
  "pytest-cov>=6.0.0",
  "python-dotenv>=1.0.1",
  "iniconfig>=2.0.0",
  "uvloop>=0.21.0",
  "aiostream>=0.6.4",
  "rich>=13.9.4",
]
description = ""
name = "mbpy"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.5"

[project.scripts]
mb = "mbpy.main:cli"
mbpip = "mbpy.main:cli"
mbpy = "mbpy.main:cli"
mpip = "mbpy.main:cli"

[project.optional-dependencies]
cython = [
  "cython>=3.0.11",
]
dev = [
  "pytest-asyncio>=0.25.0",
  "textual>=1.0.0",
]
extras = [
  'uvloop>=0.21.0',
  'aiofiles==24.1.0',
  'diskcache>=5.6.3',
  'lxml',
  'more-itertools>=10.5.0',
  'requests>=2.26.0',
  'rich-click>=1.8.3',
  'tomlkit>=0.12.0',
]
mkdocs = [
  "mkdocs>=1.6.1",
  'mkdocs-material>=9.5.42',
  'mkdocs>=1.6.1',
  'mkdocstrings>=0.24.3',
]
perf = [
  "aiohttp>=3.11.11",
  "orjson>=3.10.12",
  "uvloop>=0.21.0",
]
profile = [
  "psutil>=6.1.1",
  "pynvml>=12.0.0",
]
sphinx = [
  "sphinxcontrib-napoleon>=0.7",
  "sphinx>=8.1.3",
  'furo',
  "sphinx-tippy>=0.4.3",
  "sphinx>=6.2.1",
  "sphinx-autodoc2>=0.5.0",
  "sphinx-design>=0.5.0",
]

all = [
  "mrender @ file:///Users/sebastianperalta/simply/corp/projects/mrender",
  "tomlkit>=0.13.2",
  "aiofiles>=24.1.0",
  "pybind11>=2.13.6",
  "Jinja2>=3.1.5",
  "typing_extensions>=4.12.2",
  "distro>=1.9.0",
  "attrs>=24.3.0",
  "h11>=0.14.0",
  "regex>=2024.11.6",
  "fastjsonschema>=2.21.1",
  "multidict>=6.1.0",
  "greenlet>=3.1.1",
  "toml>=0.10.2",
  "pathspec>=0.12.1",
  "coverage>=7.6.10",
  "beautifulsoup4>=4.12.3",
  "mypy>=1.14.1",
  "Markdown>=3.0.0",
  "keyring>=25.6.0",
  "frozenlist>=1.5.0",
  "filelock>=3.16.1",
  "more-itertools>=10.5.0",
  "twine>=6.0.1",
  "certifi>=2024.12.14",
  "pytest>=8.3.4",
  "yarl>=1.18.3",
  "requests>=2.32.3",
  "zstandard>=0.23.0",
  "anyio>=4.8.0",
  "numpy>=2.2.1",
  "urllib3>=2.3.0",
  "MarkupSafe>=3.0.2",
  "joblib>=1.4.2",
  "idna>=3.10",
  "openai>=1.59.7",
  "python-dateutil>=2.9.0.post0",
  "aiohttp>=3.11.11",
  "packaging>=24.2",
  "setuptools>=75.8.0",
  "click>=8.1.8",
  "tomli_w>=1.1.0",
  "lark>=1.2.2",
  "six>=1.17.0",
  "tqdm>=4.67.1",
  "Cython>=3.0.11",
  "distlib>=0.3.9",
  "pkginfo>=1.12.0",
  "playwright>=1.49.1",
  "nltk>=3.9.1",
  "httpcore>=1.0.7",
  "platformdirs>=4.3.6",
  "httpx>=0.28.1",
  "docutils>=0.21.2",
  "networkx>=3.4.2",
  "soupsieve>=2.6",
  "charset-normalizer>=3.4.1",
  "pytest-cov>=6.0.0",
  "python-dotenv>=1.0.1",
  "iniconfig>=2.0.0",
  "uvloop>=0.21.0",
  "aiostream>=0.6.4",
  "sphinxcontrib-napoleon>=0.7",
  "furo>=2024.8.6",
  "sphinx>=8.1.3",
  "rich>=13.9.4",
]
[tool.setuptools]

packages = ["mbpy"]
[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

includes = ["mbpy"]
packages = ["mbpy"]
parallel = true
source-files = ["./**/*.pyx"]
src = "."


[tool.hatch.build.targets.wheel.hooks.cython.options.directives]
binding = true
boundscheck = false
languagelvl = 3
nonecheck = false
[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.ruff]
fixable = ["ALL"]
ignore = [
  "D105",
  "PGH004",
  "D100",
  "D101",
  "D104",
  "D106",
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN204",
  "UP009",
  "B026",
  "ANN001",
  "ANN401",
  "ANN202",
  "D107",
  "D102",
  "D103",
  "E731",
  "UP006",
  "UP035",
  "ANN002",
]
line-length = 120
select = ["A", "COM812", "C4", "D", "E", "F", "UP", "B", "SIM", "N", "ANN", "ASYNC", "S", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PD", "I", "PLW"]

[dependency-groups]
c = [
  "cython>=3.0.11",
]
dev = [
  "jaraco-text>=4.0.0",
  "mypy>=1.13.0",
  "playwright>=1.49.0",
]
types = [
  "mypy>=1.13.0",
]

[tool.mypy]
plugins = ["mbpy.plugin"]
[tool.pytest]
asyncio_default_fixture_loop_scope = "function"
